# lox-c

./: .dockerignore  .gitignore  .ycm_extra_conf.py  Dockerfile  Makefile  README.md  Vagrantfile  chunk.h  config.h  expect.awk  hashtab.h  lex.c  lex.h  lox  lox-debug  lox-release  main.c  meson.build  meson_options.txt  object.h  parse.c  parse.h  result.h  test.sh  utils.c  utils.h  value.c  value.h  vm.c  vm.h  xmake.lua
test/: arithmetic.lox  big.lox  boolean_logic.lox  convert.lox  count.lox  fn_eq.lox  function.lox  function_naked_return.lox  nil_eq.lox  scopes.lox  stack_trace.lox  var.lox
test/official/assignment/: grouping.lox  infix_operator.lox  prefix_operator.lox  undefined.lox
test/official/expressions/: evaluate.lox
test/official/number/: decimal_point_at_eof.lox  leading_dot.lox  literals.lox  trailing_dot.lox
test/official/operator/: add_bool_nil.lox  add_bool_num.lox  add_bool_string.lox  add_nil_nil.lox  add_num_nil.lox  add_string_nil.lox  divide_nonnum_num.lox  divide_num_nonnum.lox  greater_nonnum_num.lox  greater_num_nonnum.lox  greater_or_equal_nonnum_num.lox  greater_or_equal_num_nonnum.lox  less_nonnum_num.lox  less_num_nonnum.lox  less_or_equal_nonnum_num.lox  less_or_equal_num_nonnum.lox  multiply.lox  multiply_nonnum_num.lox  multiply_num_nonnum.lox  negate_nonnum.lox  not.lox  subtract_nonnum_num.lox  subtract_num_nonnum.lox
test/official/print/: missing_argument.lox
test/official/string/: error_after_multiline.lox  unterminated.lox
test/official/while/: syntax.lox  var_in_body.lox
